--- a/Flexbox/css/base/estilo_base.css
+++ b/Flexbox/css/base/estilo_base.css
@@ -10,7 +10,7 @@ html {
 .container > * {
     background-color: rgba(79, 169, 172, 0.25);
     border-radius: 3px;
-    border: 1px solid #fff;
+    border: 1px solid rgba(18, 93, 88, 0.25);
     color: #252452;
     margin: 10px;
     padding: 20px;
@@ -21,16 +21,32 @@ html {
 body {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
         sans-serif;
-    width: 700px;
     margin: 0 auto;
+    margin: auto 5%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-h1 {
+header {
+    width: 100%;
+}
+
+.title {
     color: rgb(16, 16, 36);
+    margin-left: 2.5%;
 }
 
-h2 span {
+.article {
+    border-radius: 15px;
+    padding: 20px;
+    margin: 20px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+    min-width: 25%;
+}
+
+.article .article__header {
     font-family: "Times New Roman", Times, serif;
+    font-size: 25px;
 }
 
 .container > *:hover {
